tambah titik cctv situ bagendit

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 			<button class="location-btn" onclick="showVideo('limbangan', 'LIMBANGAN')">LIMBANGAN</button>
 			<button class="location-btn" onclick="showVideo('lewo', 'PASAR LEWO')">PASAR LEWO</button>
 			<button class="location-btn" onclick="showVideo('malangbong', 'PASAR MALANGBONG')">PASAR MALANGBONG</button>
+			<button class="location-btn" onclick="showVideo('bagendit', 'SITU BAGENDIT')">SITU BAGENDIT</button>
         </div>
 
         <div id="videoContainer" class="video-container">
@@ -148,7 +149,8 @@
 			'kadungora': 'https://shinobi.garutkab.go.id/FYI5ypF4oVS0nc1pIy2HwnjnbDQsNf/mp4/csdR7AiwZ7/kadungora/s.mp4',
 			'limbangan': 'https://shinobi.garutkab.go.id/FYI5ypF4oVS0nc1pIy2HwnjnbDQsNf/mp4/csdR7AiwZ7/limbangan/s.mp4',
 			'lewo': 'https://shinobi.garutkab.go.id/FYI5ypF4oVS0nc1pIy2HwnjnbDQsNf/mp4/csdR7AiwZ7/lewo/s.mp4',
-			'malangbong': 'https://shinobi.garutkab.go.id/FYI5ypF4oVS0nc1pIy2HwnjnbDQsNf/mp4/csdR7AiwZ7/malangbong/s.mp4'
+			'malangbong': 'https://shinobi.garutkab.go.id/FYI5ypF4oVS0nc1pIy2HwnjnbDQsNf/mp4/csdR7AiwZ7/malangbong/s.mp4',
+			'bagendit': 'https://shinobi.garutkab.go.id/FYI5ypF4oVS0nc1pIy2HwnjnbDQsNf/mp4/csdR7AiwZ7/bagendit/s.mp4'
         };
 
         function showVideo(locationId, locationName) {
